Refactor for other tests (I319).